Defining style for scroll container to adapt to mobile devices.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <div class="content">
              <!--title block, background image is title image-->
-            <div class="row" style="background-image:url(assets/Naples_regional.png); background-size:cover; background-repeat: no-repeat">
+            <div class="row" style="background-image:url(assets/Naples_regional.png); background-size: cover; background-repeat: no-repeat">
                 <div class="center title">
                     <!--title text-->
                     <h1>Ukiyo-e Map</h1>
@@ -56,11 +56,11 @@
             <!--background images with text scrolling over them (sidecar)-->
             <div class="scroll-container">    
                 <!--background images-->
-                <div class="background-item">
-                    <img src="assets/CapeTown_regional.png" data-slide="1" class="fill">
-                    <img src="assets/Bergen_citybirdview.png" data-slide="2" class="fill hidden">
-                    <img src="assets/LondonBridge_buildingview.png" data-slide="3" class="fill hidden">
-                    <img src="assets/USCapitol_buildingview.png" data-slide="4" class="fill hidden">
+                <div class="background-item" style="height: 100vh; background-size: contain; background-repeat: no-repeat; background-position: center center; display: flex; flex-direction: column">
+                    <img src="assets/CapeTown_regional.png" data-slide="1" class="contain">
+                    <img src="assets/Bergen_citybirdview.png" data-slide="2" class="contain hidden">
+                    <img src="assets/LondonBridge_buildingview.png" data-slide="3" class="contain hidden">
+                    <img src="assets/USCapitol_buildingview.png" data-slide="4" class="contain hidden">
                 </div>
                 <!--foreground text blocks-->
                 <div class="foreground-item">
